--- a/TransporteApp/package.json
+++ b/TransporteApp/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor/splash-screen": "^6.0.2",
+    "@capacitor/status-bar": "^6.0.1",
     "@ionic/angular": "^8.0.0",
+    "@ionic/pwa-elements": "^3.3.0",
     "@types/googlemaps": "^3.43.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
