--- a/TransporteApp/package.json
+++ b/TransporteApp/package.json
@@ -25,6 +25,7 @@
     "@capacitor/status-bar": "^6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/pwa-elements": "^3.3.0",
+    "@ionic/storage-angular": "^4.0.0",
     "@types/googlemaps": "^3.43.3",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
